--- a/.github/workflows/master_javacase1sample.yml
+++ b/.github/workflows/master_javacase1sample.yml
@@ -19,54 +19,36 @@ jobs:
       - name: Build project with Maven
         run: mvn clean install --file pom.xml
 
-  #     - name: Test project with Maven
-  #       run: mvn test --file pom.xml
-  #       env:
-  #         TEST_REPORT_DIR: ${{ github.workspace }}/target/surefire-reports
+
 
         
-  # deploy-job:
-  #   runs-on: ubuntu-latest
-  #   needs: [publish-job]
-  #   steps:
-  #     - name: Deploy to Azure App Service
-  #       uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'samplejava0100'  # Replace with your Azure App Service name
-  #         slot-name: 'production'    # Replace with your deployment slot name if applicable
-  #         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9ECB0A6A95C64112A06AFF0BE1D3243B  }}  # Store your publish profile in GitHub Secrets
-  #         package: staging/my-web-app.war   # Path to the WAR file in the staging directory
+  deploy-job:
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
+      - name: Deploy to Azure App Service
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'samplejava0100'  # Replace with your Azure App Service name
+          slot-name: 'production'    # Replace with your deployment slot name if applicable
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9ECB0A6A95C64112A06AFF0BE1D3243B  }}  # Store your publish profile in GitHub Secrets
+          package: staging/my-web-app.war   # Path to the WAR file in the staging directory
 
 
-  # publish-job:
-  #   runs-on: ubuntu-latest
-  #   needs: [build_and_test]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-java@v1
-  #       with:
-  #         java-version: 14
-  #     - run: mvn clean install --file pom.xml -DskipTests
-  #     - name: Create staging directory
-  #       run: mkdir -p staging
-  #     - name: Copy artifacts to staging directory
-  #       run: cp target/*-jar-with-dependencies.jar staging/
-  #     - name: Archive artifacts
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #        name: Package
-  #        path: staging
-  #        retention-days: 7
-  #        working-directory: staging
-         
-  #     - name: Publish test results
-  #       run: 
-  #         mkdir -p test-results
-  #         find ${{ env.TEST_REPORT_DIR }} 
-  #     - name: Upload test results
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: Test Results
-  #         path: test-results
-  #         if-no-files-found: warn
-		  
+  notify:
+    needs: deploy-job
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Send Email Notification - Success
+      if: always()
+      uses: dawidd6/action-send-mail@v2
+      with:
+        server_address: smtp.gmail.com
+        server_port: 587
+        username: 123rajubhovi@gmail.com
+        password: tymgrgiyjqyuatqe
+        subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+        body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+        to: rajubhovi999@gmail.com
+        from: 123rajubhovi@gmail.com
