--- a/.github/workflows/master_javacase1sample.yml
+++ b/.github/workflows/master_javacase1sample.yml
@@ -22,10 +22,7 @@ jobs:
 
 
         
-  deploy-job:
-    runs-on: ubuntu-latest
-    needs: build_and_test
-    steps:
+
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
@@ -34,21 +31,16 @@ jobs:
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_9ECB0A6A95C64112A06AFF0BE1D3243B  }}  # Store your publish profile in GitHub Secrets
           package: staging/my-web-app.war   # Path to the WAR file in the staging directory
 
-
-  notify:
-    
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Send Email Notification - Success
-      if: always()
-      uses: dawidd6/action-send-mail@v2
-      with:
-        server_address: smtp.gmail.com
-        server_port: 587
-        username: 123rajubhovi@gmail.com
-        password: tymgrgiyjqyuatqe
-        subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
-        body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
-        to: rajubhovi999@gmail.com
-        from: 123rajubhovi@gmail.com
+ 
+      - name: Send Email Notification
+        if: always()
+        uses: dawidd6/action-send-mail@v2
+        with:
+         server_address: smtp.gmail.com
+         server_port: 587
+         username: 123rajubhovi@gmail.com
+         password: tymgrgiyjqyuatqe
+         subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+         body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+         to: rajubhovi999@gmail.com
+         from: 123rajubhovi@gmail.com
