--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.kth</groupId>
-    <artifactId>github-action-maven-tutorial</artifactId>
-    <version>1.0-SNAPSHOT</version>    
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -107,4 +104,17 @@
         </dependency>
     </dependencies>
 
+
+           <groupId>org.kth</groupId>
+    <artifactId>github-action-maven-tutorial</artifactId>
+    <version>1.0-SNAPSHOT</version>    
+
 </project>
+hdhdh
+d
+d
+
+dd
+dd
+
+d
