--- a/.github/workflows/javatest1.yaml
+++ b/.github/workflows/javatest1.yaml
@@ -20,6 +20,10 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
 
+    - name: Inspect JAR Contents
+      run: jar tf target/github-action-maven-tutorial-1.0-SNAPSHOT-jar-with-dependencies.jar
+
+
     - name: Build Docker image
       run: docker build -t myapp:latest .
 
