--- a/.github/workflows/javatest1.yaml
+++ b/.github/workflows/javatest1.yaml
@@ -57,4 +57,4 @@ jobs:
         port: 22
         script: |
           sudo docker load -i /home/ubuntu/myapp.tar/myapp.tar
-          sudo docker run -d --name myapp -p 8080:8080 myapp:latest
+          sudo docker run -dit --name myapp -p 8080:8080 myapp:latest
