--- a/.github/workflows/javatest1.yaml
+++ b/.github/workflows/javatest1.yaml
@@ -28,7 +28,7 @@ jobs:
       run: docker build -t myapp:latest .
 
     - name: Save Docker image as tar
-      run: docker save myapp:latest > myapp.tar
+      run: docker save myapp:latest > myapp.jar
 
     - name: Transfer Docker image to EC2
       uses: appleboy/scp-action@master
@@ -37,8 +37,8 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_KEY }}
         port: 22
-        source: myapp.tar
-        target: /home/ubuntu/myapp.tar
+        source: myapp.jar
+        target: /home/ubuntu/myapp.jar
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,5 +56,5 @@ jobs:
         key: ${{ secrets.EC2_KEY }}
         port: 22
         script: |
-          sudo docker load -i /home/ubuntu/myapp.tar/myapp.tar
+          sudo docker load -i /home/ubuntu/myapp.jar/myapp.jar
           sudo docker run -dit --name myapp -p 8080:8080 myapp:latest
